# func.gg

./: .gitignore  Cargo.toml  README.md  go.mod  handler.component.wasm  package.json
.github/workflows/: cargo.yml
cmd/funcd/: main.go
crates/func_runtime/: Cargo.toml
crates/func_runtime/src/: comms.rs  mod.rs  snapshot.rs
crates/func_runtime/src/ext/: deno_console.js  deno_url.js  deno_web.js  deno_websocket.js  funcgg_entrypoint.js  mod.rs  permissions.rs
crates/func_runtime/src/js/: worker.js
crates/func_worker/: Cargo.toml  build.rs
crates/func_worker/examples/: hono.js
crates/func_worker/src/: main.rs  pool.rs  routes.rs  worker.rs
crates/funcd/: Cargo.toml
crates/funcd/src/: config.rs  ipc.rs  main.rs  runtime.rs  server.rs
crates/funcd/ts/: entry_point.ts  handler.ts
crates/funcgg-runtime/: Cargo.toml
crates/funcgg-runtime/src/: http.rs  lib.rs  loader.rs  mod.rs  runtime.rs  sandbox.rs  snapshot.rs
crates/funcgg-runtime/src/ext/: deno_net.js  funcgg_entrypoint.js  mod.rs
crates/funcgg-runtime/src/js/: entrypoint.js  worker.js
crates/funcgg-worker/: Cargo.toml  build.rs
crates/funcgg-worker/examples/: basic.js
crates/funcgg-worker/src/: main.rs  pool.rs  routes.rs  worker.rs
crates/funcgg-worker/src/workers/: pool.rs  worker.rs
examples/: basic.js  big_heap.js  echo.js  sse.js  streaming.js  websocket.js
examples/go-hello-world/: go.mod  main.go
examples/go-hello-world/script/: build
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/tinygo/: go.mod  main.go
internal/rt/: rt_bun.go
js/: handler.ts  serve.js
script/: build  build-examples  funcd  init  server  socksend  test-sse  test-websocket  watch  wit-fetch
src/: lib.rs  main.rs  routes.rs  runtime.rs  stream.rs  worker_pool.rs
src/runtime/: example.js  ext.rs  handler.js  http.rs  loader.rs  mod.rs  runtime.rs  sandbox.rs  snapshot.rs  worker.js
src/runtime/ext/: deno_fetch.js  deno_webidl.js  funcgg_entrypoint.js  funcgg_tmp.js  mod.rs  permissions.rs
src/runtime/js/: worker.js
src/runtime/js/ext/: 01_tmp.js  99_entrypoint.js  funcgg_entrypoint.js  init.deno_console.js  init.deno_fetch.js  init.deno_net.js  init.deno_web.js  init.deno_webidl.js
src/streams/: input.rs  mod.rs  output.rs  receiver.rs  request.rs  sender.rs
src/worker/: mod.rs  pool.rs  worker.rs
src/workers/: pool.rs  worker.rs
wit/: funcgg.wit  wunc.wit
