[package]
name = "funcgg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7", features = ["macros"] }
deno_ast = { version = "0.48.0", features = ["transpiling"] }
deno_console = "0.214.0"
deno_core = "0.355.0"
deno_error = "0.7.0"
deno_fetch = "0.238.0"
deno_net = "0.206.0"
deno_permissions = "0.73.0"
deno_telemetry = "0.36.0"
deno_url = "0.214.0"
deno_web = "0.245.0"
deno_webidl = "0.214.0"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv"] }
rustls = "0.23.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_v8 = "0.262.0"
tokio = { version = "1.42.0", features = ["io-util", "rt", "macros", "net"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v7", "serde"] }
