[package]
name = "func_runtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
deno_ast = { workspace = true }
deno_console = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_fetch = { workspace = true }
deno_net = { workspace = true }
deno_permissions = { workspace = true }
deno_telemetry = { workspace = true }
deno_url = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
deno_websocket = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_v8 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
