[package]
name = "func_worker"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "funcgg_worker"
path = "src/main.rs"

[dependencies]
func_runtime = { path = "../func_runtime" }
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
deno_core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
func_runtime = { path = "../func_runtime" }
