[package]
name = "funcd"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "funcd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.6", features = ["ws"] }
axum-reverse-proxy = "1.0.3"
http-body-util = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
