[package]
name = "funcd"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "funcd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
http = "1.3.1"
http-body-util = "0.1"
lambda_http = "0.17.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "process", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
