[package]
name = "funcgg-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
deno_ast = { workspace = true }
deno_console = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_fetch = { workspace = true }
deno_net = { workspace = true }
deno_permissions = { workspace = true }
deno_telemetry = { workspace = true }
deno_url = { workspace = true }
deno_web = { workspace = true }
deno_webidl = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_v8 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }