[package]
name = "funcgg-worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "funcgg-worker"
path = "src/main.rs"

[dependencies]
funcgg-runtime = { path = "../funcgg-runtime" }
anyhow = { workspace = true }
axum = { workspace = true }
deno_core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }